--- a/modules/clause_insurance/view/clause_rule_form.xml
+++ b/modules/clause_insurance/view/clause_rule_form.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
-<data>
-  <xpath expr="/form" position="replace_attributes">
-    <form string="Clause rule"/>
-  </xpath>
-  <xpath expr="/form" position="inside">
-    <newline/>
+<form string="Clause rule">
+    <label name="name"/>
+    <field name="name" colspan="3"/>
+    <label name="start_date"/>
+    <field name="start_date"/>
+    <label name="end_date"/>
+    <field name="end_date"/>
     <field name="clauses" xexpand="1" yexpand="1" colspan="4"/>
-  </xpath>
-</data>
+</form>
