--- a/modules/contract_clause/view/clause_form.xml
+++ b/modules/contract_clause/view/clause_form.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0"?>
 <form string="Clauses">
-  <label name="clause"/>
-  <field name="clause" colspan="3"/>
-  <label name="kind"/>
-  <field name="kind" colspan="3"/>
-  <field name="visual_text" colspan="4" widget="richtext"/>
-  <field name="text"/>
-  <field name="override_text"/>
+    <label name="clause"/>
+    <field name="clause"/>
+    <field name="visual_text" colspan="4" widget="richtext"/>
+    <field name="text"/>
+    <newline/>
+    <field name="override_text"/>
 </form>
