--- a/modules/contract_life_clause/view/covered_data_form.xml
+++ b/modules/contract_life_clause/view/covered_data_form.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <data>
-  <xpath expr="/form/notebook/page[@id='clauses']/field[@name='clauses']" position="after">
-    <field name="beneficiary_clauses"/>
-  </xpath>
+    <xpath expr="/form/notebook/page[@id='clauses']" position="after">
+        <page string="Beneficiary Clauses" id="beneficiary_clauses">
+            <field name="beneficiary_clauses"/>
+        </page>
+    </xpath>
 </data>
