--- a/modules/contract_insurance_clause/view/clause_list.xml
+++ b/modules/contract_insurance_clause/view/clause_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-  <xpath expr="/tree/field[@name='override_text']" position="after">
+  <xpath expr="/tree/field[@name='clause']" position="after">
     <field name="covered_data"/>
     <field name="beneficiaries" tree_invisible="1"/>
   </xpath>
