--- a/modules/loan/view/loan_increment_tree.xml
+++ b/modules/loan/view/loan_increment_tree.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Loan Increments" editable="bottom">
     <field name="number"/>
-    <field name="start_date"/>
-    <field name="begin_balance"/>
     <field name="number_of_payments"/>
-    <field name="end_date"/>
-    <field name="deferal"/>
+    <field name="payment_amount">
+        <suffix name="currency_symbol"/>
+    </field>
     <field name="rate" factor="100">
         <suffix string="%"/>
     </field>
-    <field name="payment_amount"/>
+    <field name="start_date"/>
+    <field name="end_date"/>
+    <field name="deferal"/>
+    <field name="begin_balance"/>
 </tree>
