--- a/modules/contract_clause/view/clause_form.xml
+++ b/modules/contract_clause/view/clause_form.xml
@@ -3,7 +3,7 @@
     <label name="clause"/>
     <field name="clause"/>
     <field name="visual_text" colspan="4" widget="richtext"/>
-    <field name="text"/>
+    <field name="text" colspan="4" widget="richtext"/>
     <newline/>
     <field name="customized_text"/>
 </form>
