--- a/modules/contract_life_clause/view/clause_form.xml
+++ b/modules/contract_life_clause/view/clause_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-  <xpath expr="/form/field[@name='visual_text']" position="after">
+  <xpath expr="/form/field[@name='text']" position="after">
     <field name="beneficiaries" colspan="4"/>
     <field name="with_beneficiary_list"/>
   </xpath>
