Reworked module contract

--- a/modules/contract/view/contract_tree.xml
+++ b/modules/contract/view/contract_tree.xml
@@ -4,5 +4,5 @@
     <field name="subscriber"/>
     <field name="status"/>
     <field name="start_date"/>
-    <field name="offered"/>
+    <field name="product"/>
 </tree>
