--- a/modules/contract/view/quote_tree.xml
+++ b/modules/contract/view/quote_tree.xml
@@ -2,5 +2,5 @@
 <tree string="Contract">
     <field name="subscriber"/>
     <field name="start_date"/>
-    <field name="offered"/>
+    <field name="product"/>
 </tree>
