--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -18,17 +18,14 @@
     <page string="Options" id="options">
       <field name="options" colspan="4"/>
     </page>
-    <page string="Complementary Data" id="extra_data">
+    <page string="Complementary Data" id="extra_data" name="extra_data">
       <field name="extra_data" no_command="1"/>
-    </page>
-    <page string="Documents" id="documents">
-      <field name="documents" xexpand="1" xfill="1" yexpand="1" yfill="1" mode="form"/>
     </page>
     <page string="Administration" id="admin">
       <label name="product_kind"/>
       <field name="product_kind"/>
-      <label name="offered"/>
-      <field name="offered"/>
+      <label name="product"/>
+      <field name="product"/>
       <label name="appliable_conditions_date"/>
       <field name="appliable_conditions_date"/>
     </page>
