--- a/modules/contract/view/option_list.xml
+++ b/modules/contract/view/option_list.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="option">
     <field name="contract"/>
-    <field name="offered"/>
-    <field name="start_date"/>
-    <field name="end_date"/>
+    <field name="coverage"/>
 </tree>
