--- a/modules/loan/view/loan_only_payments_form.xml
+++ b/modules/loan/view/loan_only_payments_form.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Amortization Table">
-    <field name="payments" colspan="4"/>
+    <field name="payments" colspan="4" mode="tree"/>
 </form>
