--- a/modules/contract_insurance/view/covered_element_option_list.xml
+++ b/modules/contract_insurance/view/covered_element_option_list.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Data">
+<tree string="Option">
   <field name="status"/>
-  <field name="start_date"/>
-  <field name="end_date"/>
-  <field name="option"/>
+  <field name="coverage"/>
   <field name="covered_element"/>
 </tree>
