--- a/modules/contract_insurance/view/manage_exclusion_select_form.xml
+++ b/modules/contract_insurance/view/manage_exclusion_select_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Manage Exclusions">
   <field name="exclusions"/>
-  <field name="coverages"/>
+  <field name="options"/>
 </form>
