--- a/modules/contract_insurance/view/manage_extra_premium_select_form.xml
+++ b/modules/contract_insurance/view/manage_extra_premium_select_form.xml
@@ -3,8 +3,8 @@
   <label name="covered_element"/>
   <field name="covered_element" colspan="3" widget="selection"/>
   <field name="extra_premiums" colspan="2"/>
-  <field name="coverages" colspan="2"/>
+  <field name="options" colspan="2"/>
   <field name="contract" invisible="1"/>
-  <field name="covered_data" invisible="1"/>
+  <field name="option" invisible="1"/>
   <field name="kind" invisible="1"/>
 </form>
