--- a/modules/contract_insurance/view/covered_element_form.xml
+++ b/modules/contract_insurance/view/covered_element_form.xml
@@ -21,7 +21,7 @@
             <newline/>
         </page>
         <page id="options" string="Options">
-            <field name="options" colspan="4" view_ids="contract_insurance.covered_element_option_view_list,contract_insurance.covered_element_option_view_form"/>
+            <field name="options" colspan="4"/>
         </page>
         <page id="covered_relations" string="Covered Relations"
             states="{'invisible': ~Eval('item_kind').in_(['person', 'company', 'party'])}">
