Do not use richtext format for mail (for the moment)

--- a/modules/offered_insurance/view/document_template_form.xml
+++ b/modules/offered_insurance/view/document_template_form.xml
@@ -19,7 +19,7 @@
       <label name="mail_subject"/>
       <field name="mail_subject"/>
       <newline/>
-      <field name="mail_body" colspan="2" widget="richtext"/>
+      <field name="mail_body" colspan="2"/>
     </page>
   </notebook>
 </form>
