--- a/modules/loan/view/contract_form.xml
+++ b/modules/loan/view/contract_form.xml
@@ -5,6 +5,8 @@
             states="{'invisible': ~Eval('is_loan')}">
             <button name="create_loan" string="Create Loan" colspan="4"/>
             <field name="loans" colspan="4" pre_validate="1"/>
+            <newline/>
+            <field name="is_loan" invisible="1"/>
         </page>
     </xpath>
     <xpath expr="//page[@id='cov_elements']" position="inside">
