--- a/modules/contract_insurance/view/covered_element_form.xml
+++ b/modules/contract_insurance/view/covered_element_form.xml
@@ -15,7 +15,7 @@
     <field name="party"/>
     <newline/>
     <notebook>
-        <page id="data" string="Complementary Data">
+        <page name="data" string="Complementary Data">
             <field name="extra_data" colspan="2" no_command="1"/>
             <field name="party_extra_data" colspan="2" no_command="1"/>
             <newline/>
