--- a/modules/loan/view/loan_form.xml
+++ b/modules/loan/view/loan_form.xml
@@ -2,12 +2,6 @@
 <form string="Loan">
   <notebook>
     <page id="main" string="Loan Create Parameters">
-      <newline/>
-      <label name="order"/>
-      <field name="order"/>
-      <label name="contract"/>
-      <field name="contract"/>
-      <newline/>
       <label name="kind"/>
       <field name="kind"/>
       <label name="rate" states="{'invisible': ~Eval('kind').in_(['fixed_rate', 'intermediate', 'balloon', 'graduated'])}"/>
@@ -21,6 +15,8 @@
           <field name="amount" xexpand="0"/>
           <label name="currency_symbol" string="" xexpand="0" xalign="0" states="{'invisible': Eval('kind') == 'leasing'}"/>
       </group>
+      <label name="currency"/>
+      <field name="currency"/>
       <newline/>
       <label name="first_payment_amount"/>
       <group id="first_payment_amount">
