--- a/modules/loan/view/option_form.xml
+++ b/modules/loan/view/option_form.xml
@@ -1,7 +1,8 @@
-<?xml version="1.0" ?>
+<?xml version="1.0"?>
 <data>
-    <xpath expr="/form" position="inside">
-        <newline/>
-        <field name="is_loan"/>
+    <xpath expr="/form/notebook/page[@id='main_data']" position="after">
+        <page string="Loan Shares" id="loan_shares">
+            <field name="loan_shares"/>
+        </page>
     </xpath>
 </data>
