Remove all links toward billing

--- a/modules/contract/view/option_form.xml
+++ b/modules/contract/view/option_form.xml
@@ -4,8 +4,9 @@
         <page string="Main Data" id="main_data">
             <label name="coverage"/>
             <field name="coverage"/>
+            <newline/>
             <label name="status"/>
-            <field name="status" readonly="1"/>
+            <field name="status"/>
         </page>
         <page string="Status History" id="status_history">
             <field name="status_history" colspan="4"/>
