--- a/modules/offered_insurance/view/option_description_list.xml
+++ b/modules/offered_insurance/view/option_description_list.xml
@@ -2,6 +2,7 @@
 <data>
     <xpath expr="/tree/field[@name='code']" position="after">
         <field name="family"/>
+        <field name="is_service"/>
         <field name="kind" tree_invisible="1"/>
     </xpath>
     <xpath expr="/tree" position="inside">
