--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -14,21 +14,24 @@
     <newline/>
     <label name="subscriber"/>
     <field name="subscriber"/>
-  <notebook colspan="4">
-    <page string="Options" id="options">
-      <field name="options" colspan="4"/>
-    </page>
-    <page string="Complementary Data" name="extra_data">
-      <field name="extra_data" no_command="1"/>
-    </page>
-    <page string="Administration" id="admin">
-      <label name="product_kind"/>
-      <field name="product_kind"/>
-      <label name="product"/>
-      <field name="product"/>
-      <label name="appliable_conditions_date"/>
-      <field name="appliable_conditions_date"/>
-    </page>
-  </notebook>
-  <newline/>
+    <notebook colspan="4">
+        <page string="Options" id="options">
+            <field name="options" colspan="4"/>
+        </page>
+        <page string="Complementary Data" name="extra_data">
+            <field name="extra_data" no_command="1"/>
+        </page>
+        <page string="Administration" id="admin">
+            <label name="product_kind"/>
+            <field name="product_kind"/>
+            <label name="product"/>
+            <field name="product"/>
+            <label name="appliable_conditions_date"/>
+            <field name="appliable_conditions_date"/>
+        </page>
+        <page string="Status History" name="status_history">
+            <field name="status_history"/>
+        </page>
+    </notebook>
+    <newline/>
 </form>
