Display rule status - Draft status allow to save with algorithm error Execute a draft rule raise an error if not in debug mode

--- a/modules/rule_engine/view/rule_engine_tree.xml
+++ b/modules/rule_engine/view/rule_engine_tree.xml
@@ -2,5 +2,6 @@
 <tree string="Rules">
     <field name="name"/>
     <field name="context"/>
+    <field name="status"/>
     <field name="tags_name"/>
 </tree>
