--- a/modules/rule_engine/view/rule_engine_form.xml
+++ b/modules/rule_engine/view/rule_engine_form.xml
@@ -6,6 +6,8 @@
   <field name="short_name"/>
   <label name="context"/>
   <field name="context"/>
+  <label name="status"/>
+  <field name="status"/>
   <notebook>
     <page name="code" string="Algorithm">
       <field name="algorithm" widget="source" context_tree="data_tree" colspan="4" xexpand="1" xfill="1"/>
