--- a/modules/loan/view/contract_form.xml
+++ b/modules/loan/view/contract_form.xml
@@ -10,6 +10,6 @@
         </page>
     </xpath>
     <xpath expr="//page[@id='cov_elements']" position="inside">
-        <field name="multi_mixed_view" group="covered_elements" mode="form" relation="loan.share" relation_field="covered_data"/>
+        <field name="multi_mixed_view" group="covered_elements" mode="form" relation="loan.share" relation_field="option"/>
     </xpath>
 </data>
