--- a/modules/clause/view/clause_form.xml
+++ b/modules/clause/view/clause_form.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0"?>
-<data>
-  <xpath expr="/form" position="replace_attributes">
-    <form string="Clause"/>
-  </xpath>
-  <xpath expr="/form/group[@id='basic data']" position="inside">
+<form string="Clauses">
     <label name="name"/>
-    <field name="name" colspan="9"/>
+    <field name="name"/>
     <label name="code"/>
     <field name="code"/>
     <label name="kind"/>
     <field name="kind"/>
-    <newline/>
-    <label name="title"/>
-    <field name="title" colspan="11"/>
-    <newline/>
     <label name="customizable"/>
     <field name="customizable"/>
-  </xpath>
-  <xpath expr="/form/group[@id='versions']/field[@name='versions']" position="replace_attributes">
-    <field name="versions" mode="form,tree"/>
-  </xpath>
-</data>
-
+    <newline/>
+    <field name="content" colspan="4"/>
+</form>
