--- a/modules/contract_life_clause/view/option_form.xml
+++ b/modules/contract_life_clause/view/option_form.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='clauses']" position="after">
-        <page string="Beneficiary Clauses" name="beneficiary_clauses">
-            <field name="beneficiary_clauses"/>
+    <xpath expr="/form/notebook" position="inside">
+        <page string="Beneficiary Clause" name="beneficiary_clause" states="{'invisible': ~Eval('with_beneficiary_clause')}">
+            <field name="with_beneficiary_clause"/>
+            <newline/>
+            <label name="beneficiary_clause"/>
+            <field name="beneficiary_clause"/>
+            <field name="customized_beneficiary_clause" colspan="4"/>
+            <field name="beneficiaries" colspan="4"/>
         </page>
     </xpath>
 </data>
