--- a/modules/contract_life_clause/view/option_form.xml
+++ b/modules/contract_life_clause/view/option_form.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/notebook" position="inside">
-        <page string="Beneficiary Clause" name="beneficiary_clause" states="{'invisible': ~Eval('with_beneficiary_clause')}">
-            <field name="with_beneficiary_clause"/>
-            <newline/>
+        <page string="Beneficiary Clause" name="beneficiary_clause"
+            states="{'invisible': ~Eval('with_beneficiary_clause')}">
             <label name="beneficiary_clause"/>
             <field name="beneficiary_clause"/>
             <field name="customized_beneficiary_clause" colspan="4"/>
