--- a/modules/contract_insurance_invoice/view/product_form.xml
+++ b/modules/contract_insurance_invoice/view/product_form.xml
@@ -4,12 +4,12 @@
         <page string="Invoice Parameters" name="invoice_parameters">
             <group id="frequencies" yexpand="1" yfill="1">
                 <label name="default_frequency"/>
-                <field name="default_frequency" colspan="3"/>
+                <field name="default_frequency" colspan="3" widget="selection"/>
                 <field name="frequencies" colspan="4"/>
             </group>
             <group id="payment_terms" yexpand="1" yfill="1">
                 <label name="default_payment_term"/>
-                <field name="default_payment_term" colspan="3"/>
+                <field name="default_payment_term" colspan="3" widget="selection"/>
                 <field name="payment_terms" colspan="4"/>
             </group>
         </page>
