--- a/modules/contract_insurance_invoice/view/contract_form.xml
+++ b/modules/contract_insurance_invoice/view/contract_form.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0"?>
 <data>
+    <xpath expr="/form/notebook/page[@id='cov_elements']" position="replace">
+        <page string="Covered Elements" id="cov_elements" states="{'invisible': Eval('product_kind') != 'insurance'}">
+            <hpaned id="covered_element" position="200">
+                <child id="tree">
+                    <field name="multi_mixed_view" group="multi_mixed_view" mode="tree" view_ids="contract_insurance.covered_elements_clean_tree" expand_toolbar="0"/>
+                </child>
+                <child id="form">
+                    <field name="multi_mixed_view" group="multi_mixed_view" mode="form" relation="contract.covered_element" relation_field="contract" view_ids="contract_insurance.covered_element_simple_view_form" expand_toolbar="0"/>
+                    <field name="multi_mixed_view" group="multi_mixed_view" mode="form" relation="contract.option" relation_field="covered_element" view_ids="contract.option_view_form" expand_toolbar="0"/>
+                </child>
+            </hpaned>
+        </page>
+    </xpath>
     <xpath expr="/form/notebook" position="inside">
         <page string="Invoicing" id="invoicing">
             <label name="payment_term"/>
