--- a/modules/contract_insurance_invoice/view/invoice_form.xml
+++ b/modules/contract_insurance_invoice/view/invoice_form.xml
@@ -77,6 +77,7 @@
             <label name="amount_to_pay"/>
             <field name="amount_to_pay"/>
             <field name="payment_lines" colspan="4" view_ids="account_invoice.move_line_view_list_payment"/>
+            <field name="reconciliation_lines" colspan="4"/>
         </page>
     </notebook>
     <field name="party_lang" invisible="1" colspan="6"/>
