--- a/modules/account_payment_cog/view/contract_tree.xml
+++ b/modules/account_payment_cog/view/contract_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-  <xpath expr="/tree/field[@name='receivable_today']" position="after">
+<!--   <xpath expr="/tree/field[@name='receivable_today']" position="after">
     <field name="paid_today"/>
     <field name="due_today"/>
-  </xpath>
+  </xpath> -->
 </data>
