--- a/modules/party_cog/view/person_tree.xml
+++ b/modules/party_cog/view/person_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree>
+<tree keyword_open="1">
     <field name="code"/>
     <field name="gender"/>
     <field name="name"/>
