Improve  create_person and subscribe_contract web service

--- a/modules/distribution/view/distribution_network_form.xml
+++ b/modules/distribution/view/distribution_network_form.xml
@@ -2,6 +2,8 @@
 <form string="Distribution Network">
     <label name="name"/>
     <field name="name"/>
+    <label name="code"/>
+    <field name="code"/>
     <notebook>
         <page id="hierarchy" string="Hierarchy">
             <label name="parent"/>
