--- a/modules/contract_loan_invoice/view/average_premium_rule_list.xml
+++ b/modules/contract_loan_invoice/view/average_premium_rule_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<tree string="Loan Mean Rules">
+<tree string="Loan Average Premium Rules">
     <field name="name"/>
     <field name="code"/>
     <field name="use_default_rule"/>
