--- a/modules/contract_loan_invoice/view/loan_average_premium_tree.xml
+++ b/modules/contract_loan_invoice/view/loan_average_premium_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <tree string="Loans">
     <field name="rec_name"/>
-    <field name="mean_premium">
+    <field name="average_premium_rate">
         <suffix string="%"/>
     </field>
 </tree>
