--- a/modules/contract_insurance_invoice/view/option_form.xml
+++ b/modules/contract_insurance_invoice/view/option_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='exclusions']" position="after">
-        <page string="Premium" id="premium">
+    <xpath expr="/form/notebook" position="inside">
+        <page string="Premium" id="premium" states="{'invisible': ~Eval('premiums')}">
             <field name="premiums"/>
         </page>
     </xpath>
