Fix issues #245 and #247 : replace status history with activation history on contracts

--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -32,8 +32,8 @@
             <label name="appliable_conditions_date"/>
             <field name="appliable_conditions_date"/>
         </page>
-        <page string="Status History" name="status_history">
-            <field name="status_history"/>
+        <page string="Activation History" name="activation_history">
+            <field name="activation_history"/>
         </page>
     </notebook>
     <newline/>
