--- a/modules/contract_insurance/view/covered_elements_clean_tree.xml
+++ b/modules/contract_insurance/view/covered_elements_clean_tree.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Covered Elements">
-  <field name="rec_name" icon="icon"/>
+  <field name="rec_name" icon="icon" expand="1"/>
 </tree>
