--- a/modules/contract/view/activation_history_form.xml
+++ b/modules/contract/view/activation_history_form.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Status History" col="6">
+<form string="Activation History">
     <label name="start_date"/>
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
-    <label name="status"/>
-    <field name="status"/>
 </form>
