--- a/modules/contract/view/activation_history_list.xml
+++ b/modules/contract/view/activation_history_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Status History">
-    <field name="status"/>
+<tree string="Activation History">
     <field name="start_date"/>
     <field name="end_date"/>
 </tree>
