--- a/modules/loan/view/options_displayer_form.xml
+++ b/modules/loan/view/options_displayer_form.xml
@@ -3,14 +3,14 @@
     <xpath expr="/form/field[@name='options']" position="replace_attributes">
         <field name="options" colspan="2"/>
     </xpath>
-    <xpath expr="/form/field[@name='options']" position="after">
-        <group id="loans" colspan="2" yfill="1" yexpand="0">
+    <xpath expr="/form/field[@name='options']" position="before">
+        <group id="loans" colspan="2" yfill="1" yexpand="0" col="2">
             <label name="default_share"/>
             <group id="default_share">
                 <field name="default_share" factor="100" xexpand="0"/>
                 <label string="%" id="percent" xexpand="0" xalign="0"/>
             </group>
-            <field name="loans" colspan="4"/>
+            <field name="loans" colspan="2" widget="multiselection"/>
         </group>
     </xpath>
 </data>
