--- a/modules/contract_insurance/view/manage_extra_premium_select_form.xml
+++ b/modules/contract_insurance/view/manage_extra_premium_select_form.xml
@@ -2,8 +2,8 @@
 <form string="Manage Extra Premium">
   <label name="covered_element"/>
   <field name="covered_element" colspan="3" widget="selection"/>
-  <field name="extra_premiums" colspan="2"/>
-  <field name="options" colspan="2"/>
+  <field name="extra_premiums" colspan="2" expand_toolbar="0"/>
+  <field name="options" colspan="2" expand_toolbar="0"/>
   <field name="contract" invisible="1"/>
   <field name="option" invisible="1"/>
   <field name="kind" invisible="1"/>
