--- a/modules/account_payment_sepa_cog/view/journal_form.xml
+++ b/modules/account_payment_sepa_cog/view/journal_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-  <xpath expr="/form/field[@name='process_method']" position="after">
-    <label name="sepa_bank_account_number"/>
-    <field name="sepa_bank_account_number"/>
+  <xpath expr="/form/field[@name='sepa_receivable_flavor']" position="after">
+    <label name="umr_sequence"/>
+    <field name="umr_sequence"/>
   </xpath>
 </data>
