Fix extra_premium creation wizard to properly manage multi-covered elements cases

--- a/modules/contract_insurance/view/extra_premium_create_option_selector_form.xml
+++ b/modules/contract_insurance/view/extra_premium_create_option_selector_form.xml
@@ -5,4 +5,5 @@
   <newline/>
   <field name="options" colspan="2"/>
   <field name="contract" invisible="1"/>
+  <field name="hide_covered_element" invisible="1"/>
 </form>
