remove typos and useless code

--- a/modules/contract_insurance/view/option_form.xml
+++ b/modules/contract_insurance/view/option_form.xml
@@ -5,7 +5,7 @@
         <field name="extra_data" colspan="2" no_command="1"/>
     </xpath>
     <xpath expr="/form/notebook/page[@id='main_data']" position="after">
-        <page string="Extra Premium" id="extra_premium">
+        <page string="Extra Premiums" id="extra_premium">
             <field name="extra_premiums" colspan="4"/>
             <button string="Propagate" name="propagate_extra_premiums" colspan="4"/>
         </page>
