--- a/modules/cog_utils/view/test_case_run_select_method_list.xml
+++ b/modules/cog_utils/view/test_case_run_select_method_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Test Cases" editable="bottom">
   <field name="selected"/>
-  <field name="name" readonly="1"/>
+  <field name="test" readonly="1"/>
   <field name="selection" tree_invisible="1"/>
-  <field name="method_name" tree_invisible="1"/>
 </tree>
